# multi-ai-code

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  PLAN.md  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.codex/: config.toml
.github/workflows/: build.yml  remote-im-tests.yml
.multi-ai-code/designs/: 项目后续规划.md
MaiChat/desktop/: CMakeLists.txt  README.md
MaiChat/desktop/installer/: windows-installer.nsi
MaiChat/desktop/qt-im/: CMakeLists.txt  README.md
MaiChat/desktop/qt-im/installer/: windows-installer.nsi
MaiChat/desktop/qt-im/scripts/: make-installer-windows.ps1  package-macos.sh  package-windows.ps1
MaiChat/desktop/qt-im/src/: main.cpp
MaiChat/desktop/qt-im/src/im/: DynamicTimSdkApi.cpp  TencentUserSigGenerator.cpp  TimSdkApi.h  TimSdkRemoteIMClient.cpp
MaiChat/desktop/qt-im/src/model/: RemoteIMMessage.h
MaiChat/desktop/qt-im/src/platform/: DesktopRemoteIMClientFactory.cpp  DesktopRemoteIMClientFactory.h  MacRemoteIMClient.h
MaiChat/desktop/qt-im/src/storage/: RemoteIMMediaStore.h
MaiChat/desktop/qt-im/src/ui/: AddContactDialog.h  LoginDialog.cpp  MainWindow.cpp
MaiChat/desktop/qt-im/tests/: AddContactDialogTest.cpp  TimSdkRemoteIMClientTest.cpp
MaiChat/desktop/resources/macos/: AppIcon.icns
MaiChat/desktop/scripts/: make-installer-windows.ps1  package-macos.sh  package-windows.ps1
MaiChat/desktop/src/: main.cpp
MaiChat/desktop/src/app/: RemoteIMApplication.cpp  RemoteIMApplication.h
MaiChat/desktop/src/im/: DynamicTimSdkApi.cpp  FakeRemoteIMClient.cpp  RemoteIMClient.h  TimSdkRemoteIMClient.cpp  TimSdkRemoteIMClient.h
MaiChat/desktop/src/markdown/: MarkdownRenderer.h
MaiChat/desktop/src/model/: ChatState.cpp  ChatState.h
MaiChat/desktop/src/platform/: DesktopRemoteIMClientFactory.cpp  UnsupportedRemoteIMClient.cpp  UnsupportedRemoteIMClient.h  WindowsRemoteIMClient.h
MaiChat/desktop/src/storage/: LocalMessageDatabase.cpp  LocalMessageDatabase.h
MaiChat/desktop/src/ui/: ImagePreviewDialog.cpp  ImagePreviewDialog.h  LoginDialog.cpp  MainWindow.cpp  MainWindow.h  UiZoom.cpp  UiZoom.h
MaiChat/desktop/tests/: ChatStateTest.cpp  MainWindowLayoutTest.cpp  RemoteIMApplicationTest.cpp  TimSdkRemoteIMClientTest.cpp  UiZoomTest.cpp
android/MultiAIIM/: .gitignore  gradle.properties  settings.gradle
desktop/qt-im/: CMakeLists.txt  README.md
desktop/qt-im/installer/: windows-installer.nsi
desktop/qt-im/resources/macos/: AppIcon.icns
desktop/qt-im/resources/windows/: app.rc
desktop/qt-im/scripts/: make-installer-windows.ps1  package-macos.sh  package-windows.ps1
desktop/qt-im/src/: main.cpp
desktop/qt-im/src/app/: RemoteIMApplication.cpp  RemoteIMApplication.h
desktop/qt-im/src/im/: DynamicTimSdkApi.cpp  DynamicTimSdkApi.h  FakeRemoteIMClient.cpp  FakeRemoteIMClient.h  RemoteIMClient.h  RemoteIMCredentialDefaults.h  TencentUserSigGenerator.h  TimSdkApi.h  TimSdkRemoteIMClient.cpp  TimSdkRemoteIMClient.h
desktop/qt-im/src/markdown/: MarkdownRenderer.cpp
desktop/qt-im/src/model/: ChatState.cpp  ChatState.h  RemoteIMContact.h  RemoteIMMessage.h
desktop/qt-im/src/platform/: MacRemoteIMClient.cpp  UnsupportedRemoteIMClient.cpp  UnsupportedRemoteIMClient.h  WindowsRemoteIMClient.cpp
desktop/qt-im/src/storage/: LocalChatHistoryStore.cpp  LocalChatHistoryStore.h  LocalMessageDatabase.cpp  LocalMessageDatabase.h  LocalSettingsStore.cpp  LocalSettingsStore.h  RemoteIMMediaStore.cpp
desktop/qt-im/src/ui/: AddContactDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h
desktop/qt-im/tests/: ChatStateTest.cpp  FakeRemoteIMClientTest.cpp  LocalChatHistoryStoreTest.cpp  LocalMessageDatabaseTest.cpp  LoginDialogTest.cpp  MainWindowLayoutTest.cpp  MarkdownRendererTest.cpp  RemoteIMApplicationTest.cpp  TencentUserSigGeneratorTest.cpp  TimSdkRemoteIMClientTest.cpp
docs/: Multi-AI-Code-老板展示版.pptx  multi-ai-code-intro.html
docs/design/: codex-tui-state-flow.html  remote-im-reply-protocol.md
docs/development/: aicli-submodule-branch-policy.md
electron/: backgroundServices.test.ts  backgroundServices.ts  main.ts  pathStyle.test.ts  pathStyle.ts  preload.remoteIm.test.ts  preload.runtime.test.ts  preload.ts
electron/aicli/: bundledCliResolver.test.ts  bundledCliResolver.ts  codexConfig.test.ts  codexConfig.ts  opencodeConfig.test.ts  opencodeConfig.ts  structuredOutputBridge.test.ts  structuredOutputBridge.ts
electron/cc/: PtyCCProcess.ts  StageDoneScanner.ts  claudeLaunchSettings.test.ts  claudeLaunchSettings.ts  codexTrust.test.ts  codexTrust.ts  ptyInput.test.ts  ptyInput.ts  ptyManager.test.ts  ptyManager.ts  resumeArgs.test.ts  resumeArgs.ts  structuredReply.test.ts  structuredReply.ts  systemPromptInjection.test.ts  systemPromptInjection.ts
electron/habit/: aggregator.test.ts  aggregator.ts  cliSpawn.test.ts  cliSpawn.ts  collector.test.ts  collector.ts  db.test.ts  db.ts  flowEngine.test.ts  flowEngine.ts  generator.test.ts  generator.ts  generatorRegistry.ts  ipc.ts  localSkillRegistry.test.ts  localSkillRegistry.ts  managedChrome.test.ts  managedChrome.ts  managedChromeCollector.test.ts  managedChromeCollector.ts  privacyInvariants.test.ts  scheduler.test.ts  scheduler.ts  screenSampleRetention.test.ts  screenSampleRetention.ts  screenSampler.test.ts  screenSampler.ts  screenSamplerLogic.test.ts  screenSamplerLogic.ts  screenSamplerService.test.ts  screenSamplerService.ts  settings.test.ts  settings.ts  skillConversationContext.test.ts  skillConversationContext.ts  skillGraphStore.test.ts  skillGraphStore.ts  skillImportService.test.ts  skillImportService.ts  skills.test.ts  (+1 more)
scripts/: aicli-build-utils.mjs  aicli-build-utils.test.mjs  archive.mjs  archive.test.mjs  asr-packaging.mjs  asr-packaging.test.mjs  build-aicli-codex.mjs  build-aicli-opencode.mjs  build-aicli.mjs  build-icons.mjs  build-intro-pptx.py  electron-builder-after-pack.cjs  package-macos-electron.sh  prepare-asr-assets.mjs  upload-macos-releases.sh
src/: App.habitMonitor.test.tsx  App.tsx  index.html  indexHtml.test.ts  main.tsx  styles.css
(+624 files in other folders)
